--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,8 @@
   "builds": [
     {
       "src": "index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "des": "/"
+      "use": "@vercel/node",
+      "buildCommand": "next build"
     }
   ]
 }
