--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,11 @@
       "use": "@vercel/node",
       "buildCommand": "next build"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
   ]
 }
